--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
    <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
       <base target="_top">
-     <title>ชั้น ป.3/7</title>
+      <title>ชั้น ป.3/7</title>
+      <!-- เพิ่ม favicon ที่นี่ -->
+      <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/anubarnsurinschool/image/arsnworldclass.png">
    </head>
    <body>
       <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbzVItmqsTT6JWPxvfuIvZLMpinNLYnnR7druAShkOuJjxaibEHGrpKo4K_2z_uHoHSe/exec"></iframe>
